# 342-quiz-2

./: README.md
.github/workflows/: grader.yml
src/: CMakeLists.txt  animal.cpp  animal.h  animal_types.h  cat.cpp  cat.h  dog.cpp  dog.h  main.cpp
test/: unit_test_oop.cpp
